<resources>
    <string name="app_name">zhangshangChaoyang</string>
    <string name="main_act_zone">zhangshangchaoyang</string>
    <string name="project_switcher_common">Life</string>
    <string name="project_switcher_work">Work</string>
    <string name="main_act_class_title">Nearby:</string>
    <string name="main_act_list_title1">Top List</string>
    <string name="main_act_list_desc1">Top shops in the city</string>
    <string name="dialog_positioning_message">定位中....</string>
    <string name="main_act_list_title2">Search</string>
    <string name="main_postioning">postioning</string>
    <string name="main_act_list_desc2">Search in the city</string>
    <string name="main_act_list_title3">Coupon</string>
    <string name="main_act_list_desc3">Saving money</string>
    <string name="main_act_list_title4">Member card</string>
    <string name="main_act_list_desc4">VIP</string>
    <string name="tab_name_1">NearBy</string>
    <string name="tab_name_2">Statistics</string>
    <string name="tab_name_3">Analysis</string>
    <string name="tab_name_4">More…</string>
    <string name="search_hint">Input case name, address etc.</string>
    <string name="case_search_hint">Input case name</string>
    <string name="file_name_format">"'LOC'_yyyyMMdd_HHmmss"</string>
    <string name="textview_loading">loading…</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="no_recent_shops">No data found</string>
    <string name="user_details_activity_error_no_photo_gallery">Photo gallery could not be started!</string>
    <string name="user_details_activity_error_set_photo_load">There was an error using the chosen photo.</string>
    <string name="user_details_activity_error_set_photo_resample">There was an error using the selected photo.</string>
    <string name="user_details_activity_set_photo_confirm_title">Profile Photo</string>
    <string name="user_details_activity_set_photo_confirm_message">Set selected photo as your profile picture?</string>
    <string name="user_details_activity_set_photo_cancel">Set photo request cancelled.</string>
    <string name="user_activity_fetch_full_image_message">Fetching Image…</string>
    <string name="title_shopdetail">Shop details</string>
    <string name="dialog_progress_msg_handling">handing...</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="main_new_building">New Buildings</string>
    <string name="main_seeming_new">Seemingly New</string>
    <string name="main_public_off">Public Tip-off</string>
    <string name="main_explored_rubbish">Explored Rubbish</string>
    <string name="main_free_stall">Free Stall</string>
    <string name="main_air_pollution">Air Pollution</string>
    <string name="main_food_hygiene">Food Hygiene</string>
    <string name="main_safe_produce">Safe Produce</string>
    <string name="main_environment_order">Environment Order</string>
    <string name="pull_to_addmore_tap_label">Tap on to get more…</string>
    <string name="pull_to_refresh_tap_label">Tap on to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_pull_label">Scroll downward to refresh…</string>
    <string name="pull_to_addmore_addmoreing_label">Fetching more data…</string>
    <string name="no_search_results">no Search Results</string>
    <string name="nearbysearchact_title_sort_distance">Shops nearby</string>
    <string name="shequ">shequ</string>
    <string name="chaoyang" />
    <string name="address">address</string>
    <string name="miaoshu">tell</string>
    <string name="fanwei">import</string>
    <string name="anjuan">anju</string>
    <string name="map_not_ready">Map initialization failed.</string>
    <string name="map_act_title">Map</string>
    <string name="opinion">Lastest comment: none</string>
    <string name="phone_number_or_email_hint">phone number</string>
    <string name="login_label">Login</string>
    <string name="password_hint">Password</string>
    <string name="forget_pass"><u>Forget Password?</u></string>
    <string name="remember_pass"><u>Remember password?</u></string>
    <string name="login_dialog_title">Login</string>
    <string name="login_dialog_message">Logining</string>
    <string name="login_failed_login_toast">Login failed</string>
    <string name="login_welcome_toast">Welcome to chaoyang mobile!</string>
    <string name="act_title_more">More</string>
    <string name="text_checkversion">Check new version</string>
    <string name="text_add_user">Add user</string>
    <string name="text_manager_user">Manager users</string>
    <string name="act_title_userlist">Users List</string>
    <string name="preferences_friend_add_title">Refresh</string>
    <string name="preferences_friend_requests_title">Cancel</string>
    <string name="text_error_no_users">No users</string>
    <string name="text_error_servererror">Server returned wrong data</string>
    <string name="text_mobile">Mobile:</string>
    <string name="adduser_dialog_title">Add User</string>
    <string name="adduser_btn_txt">Add User</string>
    <string name="username_hint">您的姓名</string>
    <string name="reply_details">批示内容</string>
    <string name="reply_result">批示结果</string>
    <string name="reply_beizhu">备注</string>
    <string name="reply_tijiao">提交</string>
    <string name="repassword_hint">Password again</string>
    <string name="isadmin_hint">Is administrator</string>
    <string name="text_changepasswd">Change password</string>
    <string name="text_logout">Logout</string>
    <string name="error_servererror">Server Error, please try again later</string>
    <string name="error_unknownservererror">Server Error, please try again later!</string>
    <string name="error_failed">Failed. Please try again later.</string>
    <string name="error_servererror_login">Server Error, please try again later</string>
    <string name="error_unknownservererror_login">Server Error, please try again later!</string>
    <string name="error_failed_login">Login Failed. Please try again later.</string>
    <string name="error_failed_login_020">Login Failed. Please try again later!</string>
    <string name="error_passwd_notmatch">Passwords not matched!</string>
    <string name="error_passwd_empty">Password cannot be empty!</string>
    <string name="error_passwd_length">Password length must be 6 to 20.</string>
    <string name="dialog_title_adduser">Add new user</string>
    <string name="dialog_text_adduser">Submitting data, pease wait…</string>
    <string name="error_failed_adduser_030">Data format is wrong, please correct them.</string>
    <string name="error_failed_adduser_021">User mobile exists. Please input a new mobile number.</string>
    <string name="adduser_success_toast">Add one user. Please continue.</string>
    <string name="adduser_getzone_fail_toast">Get Zone code failed.</string>
    <string name="Dialog_title_loadzone">Get Zone list</string>
    <string name="Dialog_text_loadzone">Loading Zone data</string>
    <string name="edituser_dialog_title">Modify User</string>
    <string name="edituser_btn_txt">Modify User</string>
    <string name="dialog_title_edituser">Modify user info</string>
    <string name="edituser_success_toast">User updated. Please continue.</string>
    <string name="range1">Today</string>
    <string name="range2">This Week</string>
    <string name="range3">This Month</string>
    <string name="range4">This Season</string>
    <string name="range5">This Year</string>
    <string name="range5_1">This Season</string>
    <string name="range6">All</string>
    <string name="btn_map">Map</string>
    <string name="text_meter">m</string>
    <string name="text_kilometer">km</string>
    <string name="toast_error_showimg">Cannot open image file.</string>
    <string name="title_changepasswd">Change password</string>
    <string name="btn_changepasswd">Submit</string>
    <string name="oldpassword_hint">Please input current password</string>
    <string name="newpassword_hint">Please input new password, 6 to 20 chars</string>
    <string name="toast_oldpasswd_not_match">The current password is not match</string>
    <string name="changepasswd_success_toast">Password changed. Please continue.</string>
    <string name="map_showdetail_fail_toast">Case detail shows failed</string>
    <string name="versioncheck_toast">Life version does not installed. Please install it first</string>
    <string name="nocasenumberinfo_toast">No case information.</string>
    <string name="nocurrentcasenumberinfo_toast">No real time cases reported.</string>
    <string name="nosearchedcasenumberinfo_toast">No cases reported found.</string>
    <string name="versioncheck_title">New Version</string>
    <string name="versioncheck_msg1">New Version</string>
    <string name="versioncheck_msg2">found. New Feathers include</string>
    <string name="versioncheck_msg3">.</string>
    <string name="versioncheck_ok">Upgrade now</string>
    <string name="versioncheck_cancel">Cancel</string>
    <string name="noversion_toast">No new Version found</string>
    <string name="version_initing_toast">Service is initialing, please try again later.</string>
    <string name="fetchingmore_unknownerror_toast">Error occurred. Please try again later.</string>
    <string name="fetchingmore_lastrecord_toast">It has been the last record.</string>
    <string name="map_nodata_toast">No case.</string>
    <string name="image_downloaderror_toast">Cannot download picture from network. Please try again later.</string>
    <string name="anjuanstatus">Case Status</string>
    <string name="opinion3">回复人：</string>
    <string name="opinion4">区领导批示</string>
    <string name="opinion5">批示时间：</string>
    <string name="opinion6">2013-08-07</string>
    <string name="opinion1">无合法手续，属违法建设</string>
    <string name="dialog_title_loadversion">Prompt</string>
    <string name="dialog_msg_loadversion">Checking new Version…</string>
    <string name="small_categary">Small categary</string>
    <string name="opinionpeople">回复人</string>
    <string name="phototype_case">Case photo</string>
    <string name="phototype_ref">Reference photo</string>
    <string name="toast_nogeo">No geo defined</string>
    <string name="anjuanfeedback">最新回复意见：</string>
    <string name="casenumbermiddle">朝阳管字</string>
    <string name="dialog_title_searchcase">Case search</string>
    <string name="dialog_text_searchcase">Searching case, pease wait…</string>
    <string name="black">000000</string>
    <string name="common_title_class1">新增建筑</string>
    <string name="common_title_class2">疑似新增建筑</string>
    <string name="common_title_class3">公众举报违建</string>
    <string name="common_title_class_construction">土方工地</string>
    <string name="common_title_class_fire">消防安全</string>
    <string name="common_title_class_publicreport">公众举报投诉</string>
    <string name="toast_no_case1">Cannot find the case</string>
    <string name="toast_no_case2">Search error. please try again later.</string>
    <string name="text_setzone_hint">Hint:</string>
    <string name="text_setzone_hint1">Please choose your zone:</string>
    <string name="checkbox_wholezone">Whole zone</string>
    <string name="checkbox_street">Street</string>
    <string name="checkbox_commnunity">Commnunity</string>
    <string name="text_setzone_enter">Enter</string>
    <string name="text_setzone_cancel">Cancel</string>
    <string name="text_setzone1_hint">Hint:</string>
    <string name="text_setzone1_hint1">Please choose your street:</string>
    <string name="text_setzone1_hint2">Please choose your community:</string>
    <string name="text_register_hint">最后一步。请输入您的个人信息进行登记。</string>
    <string name="company_hint">您的工作单位</string>
    <string name="title_hint">您的职务</string>
    <string name="register_label">完成</string>
</resources>