<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/main" android:background="@color/black_end" android:layout_width="fill_parent" android:layout_height="fill_parent" android:isScrollContainer="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/common_back_title_bar" />
    <LinearLayout android:orientation="vertical" android:background="@drawable/listview_background" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textAppearance="@style/EditTextList" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/text_setzone_hint" />
        <TextView android:textAppearance="@style/EditTextList" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/text_setzone_hint1" />
        <RadioGroup android:gravity="center" android:orientation="horizontal" android:id="@id/myRadioGroup" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="20.0dip">
            <RadioButton android:textSize="18.0sp" android:textColor="#ff41bae2" android:state_checked="true" android:gravity="center" android:layout_gravity="left|center" android:id="@id/wholezone" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:checked="true" android:text="@string/checkbox_wholezone" android:layout_weight="33.0" />
            <RadioButton android:textSize="18.0sp" android:textColor="#ff41bae2" android:gravity="center" android:id="@id/street" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/checkbox_street" android:layout_weight="33.0" />
            <RadioButton android:textSize="18.0sp" android:textColor="#ff41bae2" android:gravity="center" android:layout_gravity="right|center" android:id="@id/community" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/checkbox_commnunity" android:layout_weight="33.0" />
        </RadioGroup>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="20.0dip">
            <Button android:textColor="@color/black" android:id="@id/setzone_submit_button" android:background="@drawable/mine_item_selector" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/text_setzone_enter" android:layout_weight="50.0" />
            <Button android:textColor="@color/black" android:id="@id/setzone_cancel_button" android:background="@drawable/mine_item_selector" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/text_setzone_cancel" android:layout_weight="50.0" android:onClick="cancel" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>