<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@drawable/listview_item_manual" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/friendsActivityEmptyInner" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/friendsActivityEmptyImageView" android:layout_width="70.0dip" android:layout_height="60.0dip" android:layout_marginTop="20.0dip" android:src="@drawable/sadface" android:scaleType="fitXY" />
        <TextView android:textAppearance="@*android:style/TextAppearance.Medium" android:textColor="@color/black_end" android:id="@id/friendsActivityEmptyTextView" android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_recent_shops" android:singleLine="true" />
        <LinearLayout android:orientation="horizontal" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/friendsActivityEmptyBtnAddFriends" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/preferences_friend_add_title" android:layout_weight="1.0" />
            <Button android:id="@id/friendsActivityEmptyBtnFriendRequests" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/preferences_friend_requests_title" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>