<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/main" android:background="@color/black_end" android:layout_width="fill_parent" android:layout_height="fill_parent" android:isScrollContainer="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/common_back_title_bar" />
    <ScrollView android:background="@drawable/listview_background" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:background="@drawable/listview_background" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textAppearance="@style/EditTextList" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/text_setzone1_hint" />
            <TextView android:textAppearance="@style/EditTextList" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/text_setzone1_hint1" />
            <LinearLayout android:gravity="left|center" android:orientation="horizontal" android:background="@drawable/mine_item_selector" android:paddingLeft="12.0dip" android:paddingTop="12.0dip" android:paddingRight="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip">
                <Spinner android:id="@id/streetzonespinner" android:background="@color/grey" android:paddingLeft="20.0dip" android:paddingTop="4.0dip" android:paddingRight="20.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:gravity="left|center" android:orientation="vertical" android:id="@id/communitybody" android:paddingLeft="12.0dip" android:paddingTop="12.0dip" android:paddingRight="12.0dip" android:paddingBottom="12.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip">
                <TextView android:textAppearance="@style/EditTextList" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/text_setzone1_hint2" />
                <LinearLayout android:gravity="left|center" android:orientation="horizontal" android:background="@drawable/mine_item_selector" android:paddingLeft="12.0dip" android:paddingTop="12.0dip" android:paddingRight="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip">
                    <Spinner android:id="@id/communityzonespinner" android:background="@color/grey" android:paddingLeft="20.0dip" android:paddingTop="4.0dip" android:paddingRight="20.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="20.0dip">
                <Button android:textColor="@color/black" android:id="@id/setzone_submit_button" android:background="@drawable/mine_item_selector" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/text_setzone_enter" android:layout_weight="50.0" android:onClick="submit" />
                <Button android:textColor="@color/black" android:id="@id/setzone_cancel_button" android:background="@drawable/mine_item_selector" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/text_setzone_cancel" android:layout_weight="50.0" android:onClick="cancel" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>