<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:isScrollContainer="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/common_back_title_bar" />
    <ScrollView android:background="@drawable/listview_background" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="5.0dip" />
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="@style/EditTextList" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/text_register_hint" />
                <LinearLayout android:gravity="left|center" android:orientation="horizontal" android:background="@drawable/mine_item_selector" android:paddingLeft="12.0dip" android:paddingTop="12.0dip" android:paddingRight="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip">
                    <EditText android:textAppearance="@*android:style/TextAppearance.Large" android:textColor="@color/black" android:id="@id/phoneEditText" android:background="@null" android:paddingLeft="20.0dip" android:paddingTop="4.0dip" android:paddingRight="20.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/phone_number_or_email_hint" android:drawableLeft="@drawable/icon_name" android:inputType="phone" android:textCursorDrawable="@drawable/color_cursor" />
                </LinearLayout>
                <LinearLayout android:gravity="left|center" android:orientation="horizontal" android:background="@drawable/mine_item_selector" android:paddingLeft="12.0dip" android:paddingTop="12.0dip" android:paddingRight="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip">
                    <EditText android:textAppearance="@*android:style/TextAppearance.Large" android:textColor="@color/black" android:id="@id/usernameEditText" android:background="@null" android:paddingLeft="20.0dip" android:paddingTop="4.0dip" android:paddingRight="20.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/username_hint" android:drawableLeft="@drawable/icon_passwd" android:inputType="text" android:imeOptions="actionDone" android:textCursorDrawable="@drawable/color_cursor" />
                </LinearLayout>
                <LinearLayout android:gravity="left|center" android:orientation="horizontal" android:background="@drawable/mine_item_selector" android:paddingLeft="12.0dip" android:paddingTop="12.0dip" android:paddingRight="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip">
                    <EditText android:textAppearance="@*android:style/TextAppearance.Large" android:textColor="@color/black" android:id="@id/companyEditText" android:background="@null" android:paddingLeft="20.0dip" android:paddingTop="4.0dip" android:paddingRight="20.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/company_hint" android:drawableLeft="@drawable/icon_passwd" android:inputType="text" android:imeOptions="actionDone" android:textCursorDrawable="@drawable/color_cursor" />
                </LinearLayout>
                <LinearLayout android:gravity="left|center" android:orientation="horizontal" android:background="@drawable/mine_item_selector" android:paddingLeft="12.0dip" android:paddingTop="12.0dip" android:paddingRight="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip">
                    <EditText android:textAppearance="@*android:style/TextAppearance.Large" android:textColor="@color/black" android:id="@id/titleEditText" android:background="@null" android:paddingLeft="20.0dip" android:paddingTop="4.0dip" android:paddingRight="20.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/title_hint" android:drawableLeft="@drawable/icon_passwd" android:inputType="text" android:imeOptions="actionDone" android:textCursorDrawable="@drawable/color_cursor" />
                </LinearLayout>
                <LinearLayout android:layout_width="fill_parent" android:layout_height="25.0dip" />
                <Button android:enabled="false" android:textAppearance="@*android:style/TextAppearance.Large" android:textColor="@color/black" android:gravity="center" android:id="@id/registerbutton" android:background="@drawable/mine_item_selector" android:paddingLeft="12.0dip" android:paddingTop="4.0dip" android:paddingRight="12.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:text="@string/register_label" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="25.0dip" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>