<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:isScrollContainer="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/common_back_title_bar" />
    <ScrollView android:background="@drawable/listview_background" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="5.0dip" />
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="left|center" android:orientation="horizontal" android:background="@drawable/mine_item_selector" android:paddingLeft="12.0dip" android:paddingTop="12.0dip" android:paddingRight="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip">
                    <EditText android:textAppearance="@*android:style/TextAppearance.Large" android:textColor="@color/black" android:id="@id/phoneEditText" android:background="@null" android:paddingLeft="20.0dip" android:paddingTop="4.0dip" android:paddingRight="20.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/phone_number_or_email_hint" android:drawableLeft="@drawable/icon_name" android:inputType="phone" android:textCursorDrawable="@drawable/color_cursor" />
                </LinearLayout>
                <LinearLayout android:gravity="left|center" android:orientation="horizontal" android:background="@drawable/mine_item_selector" android:paddingLeft="12.0dip" android:paddingTop="12.0dip" android:paddingRight="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip">
                    <EditText android:textAppearance="@*android:style/TextAppearance.Large" android:textColor="@color/black" android:id="@id/passwordEditText" android:background="@null" android:paddingLeft="20.0dip" android:paddingTop="4.0dip" android:paddingRight="20.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/password_hint" android:drawableLeft="@drawable/icon_passwd" android:inputType="textPassword" android:imeOptions="actionDone" android:textCursorDrawable="@drawable/color_cursor" />
                </LinearLayout>
                <LinearLayout android:layout_width="fill_parent" android:layout_height="25.0dip" />
                <Button android:enabled="false" android:textAppearance="@*android:style/TextAppearance.Large" android:textColor="@color/black" android:gravity="center" android:id="@id/loginbutton" android:background="@drawable/mine_item_selector" android:paddingLeft="12.0dip" android:paddingTop="4.0dip" android:paddingRight="12.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:text="@string/login_label" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="25.0dip" />
            <RelativeLayout android:gravity="center_vertical" android:layout_gravity="center" android:orientation="horizontal" android:paddingLeft="12.0dip" android:paddingTop="14.0dip" android:paddingRight="12.0dip" android:paddingBottom="14.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ff41bae2" android:gravity="center" android:layout_gravity="center" android:id="@id/forget_password" android:background="@drawable/forgetpwd" android:paddingTop="6.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forget_pass" android:layout_alignParentRight="true" android:onClick="forgetPassword" />
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true">
                    <CheckBox android:textSize="18.0sp" android:textColor="#ff41bae2" android:gravity="center" android:id="@id/remember_password" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remember_pass" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>